fix bug API getWorkHOur
