# src/api/helpers/caculatorTime.js
@@ -1,13 +1,12 @@
 const moment = require("moment");
 const { Op } = require("sequelize");
 
-const caculatorWorkingTime = ({checkin_time, checkout_time}) => {
-  
+const caculatorWorkingTime = ({ checkin_time, checkout_time }) => {
   const formatCheckin = moment(checkin_time).format("HH:mm");
   const formatCheckout = moment(checkout_time).format("HH:mm");
   const checkoutTime = moment(formatCheckout, "HH:mm");
   const checkinTime = moment(formatCheckin, "HH:mm");
-  
+
   const totalTimeWorkingMinutes = checkoutTime.diff(
     checkinTime,
     "minutes",
@@ -20,5 +19,41 @@ const caculatorWorkingTime = ({checkin_time, checkout_time}) => {
   const formattedTime = `${hours}:${minutes}`;
   return formattedTime;
 };
+const formatTime = (hours) => {
+  const roundedHours = Math.floor(hours);
+  const minutes = Math.round((hours - roundedHours) * 60);
+  return `${roundedHours.toString().padStart(2, "0")}:${minutes
+    .toString()
+    .padStart(2, "0")}`;
+};
+const getWorkingHour = (LIST_USER_ATTENDANCE) => {
+  try {
+    const resultObj = {};
 
-module.exports = caculatorWorkingTime;
+    for (let i = 0; i < LIST_USER_ATTENDANCE.length; i++) {
+      const attendance = LIST_USER_ATTENDANCE[i];
+      const attendanceDate = attendance.ATTENDANCE_DATE;
+      if (attendance.CHECK_IN_DATE_TIME) {
+        temp = attendance;
+      }
+      if (attendance.CHECK_OUT_TIME && temp) {
+        const check_out_time = new Date(attendance.CHECK_OUT_DATE_TIME);
+        const check_in_time = new Date(temp.CHECK_IN_DATE_TIME);
+        const totalWorks = Math.floor(
+          (check_out_time - check_in_time) / 1000 / 60
+        );
+        if (!resultObj[attendanceDate]) {
+          resultObj[attendanceDate] = { totalWorkHour: 0 };
+        }
+
+        resultObj[attendanceDate].totalWorkHour += totalWorks;
+      }
+    }
+
+    return Object.values(resultObj);
+  } catch (error) {
+    console.log(error);
+  }
+};
+
+module.exports = { caculatorWorkingTime, getWorkingHour };
