# src/api/swagger/api/openapi.yaml
@@ -10,8 +10,8 @@ info:
   #   url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-  - url: https://wns.novasquare.vn:8345
-  - url: http://192.168.1.25:8345
+  - url: http://wns.novasquare.vn:6345
+  - url: http://192.168.1.21:8345
   - url: http://localhost:8345
 
 paths:
@@ -737,13 +737,21 @@ paths:
       # security:
       #   - JWT: []
 
-  /api/attendance/getAll:
-    get:
+  /api/attendance/getAllByQuery:
+    post:
       tags:
         - attendance checkin
       summary: get all attendance
       operationId: get all attendance
-
+      requestBody:
+        description: getAllByQuery
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/attendance"
+            example:
+              "USER_ID": "142"
+              "CHECK_IN_TIME": "2023/07/10"
       responses:
         "200":
           description: Success
